# otus_cpp_hw

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  homeworks-4.1.100-Linux.deb  homeworks-4.1.101-Linux.deb  homeworks-4.1.102-Linux.deb  homeworks-4.1.103-Linux.deb  homeworks-4.1.104-Linux.deb  homeworks-4.1.105-Linux.deb  homeworks-4.1.108-Linux.deb  homeworks-4.1.110-Linux.deb  homeworks-4.1.111-Linux.deb  homeworks-4.1.112-Linux.deb  homeworks-4.1.115-Linux.deb  homeworks-4.1.96-Linux.deb  install_manifest.txt  main.cpp
01/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  test_vers_boost  test_vers_boost.cpp  test_vers_gtest  test_vers_gtest.cpp  vers_lib.cpp  vers_lib.h  version.h  version.h.in
02/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ip_filter.cpp  ip_loader.cpp  ip_loader.h  ip_main.cpp  ip_processor  ip_processor.cpp  ip_processor.h
02_tuple/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cstm_pair.hpp  cstm_pair_2.hpp  cstm_pair_exmpl.cpp  cstm_pair_exmpl_2.cpp  cstm_tuple.hpp  cstm_tuple_exmpl.cpp  custom_pair_exmpl  custom_pair_exmpl_2
03_allocator/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  custom_allocator.hpp  custom_container.hpp  fixed_sz_allocator.hpp  flexible_allocator.hpp  main_allocator.cpp  reserve_allocator.hpp  reserved_container.hpp  test_allocator.cpp  test_reserve_allocator
03_ranges/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  constexpr_func.cpp  ip_loader.cpp  ip_loader.h  ip_main.cpp  ip_processor.cpp  ip_processor.h  test_out.cpp
04_sfinae/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  print_ip  print_ip_04.h  print_ip_04.hpp
04_sfinae/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_print_ip  test_print_ip.cpp
05_editor/: CMakeLists.txt  CTestTestfile.cmake  Makefile  base_shape_2d.cpp  base_shape_2d.h  circle_shape_2d.cpp  cmake_install.cmake  color_engine.cpp  color_engine.h  composite_shape_2d.cpp  container_shape_2d.cpp  default.cpp  default.h  document.cpp  document.h  document_parameters.cpp  document_parameters.h  document_writer.h  document_writer_base.cpp  document_writer_text.cpp  editor_core.cpp  editor_core.h  main.cpp  point_2d.cpp  point_2d.h  shapes_2d.h  triangle_shape_2d.cpp
06_matrix/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cell_observer.cpp  cell_observer.h  cmake_install.cmake  effective_cell.cpp  effective_cell.h  infinite_matrix.cpp  infinite_matrix.h  infinite_row.cpp  infinite_row.h  inifinite_matrix.cpp  inifinite_matrix.h  main.cpp  matrix.h  matrix_observer.h  row_observer.cpp  row_observer.h
06_matrix/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_inf_matrix  test_inf_matrix.cpp
07_bulk/: CMakeLists.txt  block_observer.cpp  block_observer.h  block_state.cpp  block_state.h  data_block.cpp  data_block.h  data_processor.cpp  data_processor.h  data_translator.cpp  data_translator.h  main.cpp  time_holder.cpp  time_holder.h
09_files/: CMakeLists.txt  fs_comparator_controller.cpp  fs_comparator_controller.h  fs_comparator_engine.cpp  fs_comparator_options.cpp  fs_comparator_options.h  fs_main.cpp  fs_names_collection.cpp  fs_names_collection.h  fs_option_labels.cpp  fs_option_labels.h  fs_printer.h  main.cpp
09_files/include/: fs_base_file_proxy.h  fs_block_file_proxy.h  fs_block_files_holder.h  fs_blocks_number_proxy.h  fs_comparator_controller.h  fs_comparator_engine.h  fs_comparator_options.h  fs_file_block_proxy.h  fs_hash_algorithm.h  fs_lazy_file.h  fs_lazy_files_holder.h  fs_names_collection.h  fs_option_labels.h  fs_printer.h
09_files/src/: fs_base_file_proxy.cpp  fs_block_file_proxy.cpp  fs_block_files_holder.cpp  fs_blocks_number_proxy.cpp  fs_comparator_controller.cpp  fs_comparator_engine.cpp  fs_comparator_options.cpp  fs_file_block_proxy.cpp  fs_hash_algorithm.cpp  fs_lazy_file.cpp  fs_lazy_files_holder.cpp  fs_main.cpp  fs_names_collection.cpp  fs_printer.cpp
09_files/tests/: CMakeLists.txt  test_file_blocks_number.cpp
10_bulkmt/: CMakeLists.txt
10_bulkmt/include/: mtb_block_observer.h  mtb_block_state.h  mtb_block_transporter.h  mtb_data_block.h  mtb_data_processor.h  mtb_data_translator.h  mtb_stats_counter.h  mtb_time_holder.h  mtb_transporter_worker.h
10_bulkmt/src/: mtb_block_observer.cpp  mtb_block_state.cpp  mtb_block_transporter.cpp  mtb_data_block.cpp  mtb_data_processor.cpp  mtb_data_translator.cpp  mtb_main.cpp  mtb_time_holder.cpp  mtb_transporter_worker.cpp
11_bulk_async/: CMakeLists.txt
11_bulk_async/include/: async_block_observer.h  async_block_state.h  async_data_block.h  async_data_processor.h  async_data_translator.h  async_interface.h  async_time_holder.h
11_bulk_async/src/: async_block_observer.cpp  async_block_state.cpp  async_data_block.cpp  async_data_processor.cpp  async_data_translator.cpp  async_interface.cpp  async_main.cpp  async_time_holder.cpp
12_bulk_server/: CMakeLists.txt
12_bulk_server/include/: asio_bulk_controller.h  asio_bulk_redirector.h  asio_bulk_server.h  asio_bulk_session.h
12_bulk_server/src/: asio_bulk_controller.cpp  asio_bulk_main.cpp  asio_bulk_redirector.cpp  asio_bulk_server.cpp  asio_bulk_session.cpp  asio_bulk_session.cpp.autosave  asio_main.cpp
html/: 01_2main_8cpp.html  01_2main_8cpp__incl.map  01_2main_8cpp__incl.md5  02_2ip__loader_8cpp.html  02_2ip__loader_8cpp__incl.map  02_2ip__loader_8cpp__incl.md5  02_2ip__loader_8h.html  02_2ip__loader_8h__dep__incl.map  02_2ip__loader_8h__dep__incl.md5  02_2ip__loader_8h__incl.map  02_2ip__loader_8h__incl.md5  02_2ip__loader_8h_source.html  02_2ip__main_8cpp.html  02_2ip__main_8cpp__incl.map  02_2ip__main_8cpp__incl.md5  (+614 more)
multithread_pc/: CMakeLists.txt  main.cpp  mlt_thr_data_server.cpp  mlt_thr_data_server.h  prod_cons_simulator.cpp  prod_cons_simulator.h
(+406 files in other folders)
